# rknn-yolov5-cpp-for-py

./: CMakeLists.txt  README.md  build.sh  classes.txt  setup.py  test.py
include/: ThreadPool.hpp  postprocess.h  rknnPool.hpp
pybind11/: CMakeLists.txt
src/: objdetecter.cc  postprocess.cc
